--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+    background: none;
+    border: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: 'Work Sans', sans-serif;
+}
+
+.app {
+    background-image: url('./assets/search.gif');
+    background-size: cover;
+    background-position: bottom;
+    transition: 0.4 ease-out;
+}
+
+.app.warm {
+    background-image: url('./assets/warm.jpg');
+}
+
+.app.cold {
+    background-image: url('./assets/cold.jpg');
+}
+
+main {
+    height: 100vh;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.search-box {
+    width: 100%;
+    margin: 0 0 75px;
+}
+
+.search-box .search-bar {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 3px;
+    margin-top: 100px;
+    box-shadow: 1px 3px rgba(0, 0, 0, 0.2);
+    color: #313131;
+    font-size: 20px;
+    transition: 0.4s ease;   
+}
+
+.search-box .search-bar:focus {
+    background-color: rgba(255, 255, 255, 1);
+}
+
+.location-box .location {
+    color: #fff;
+    font-size: 32px;
+    font-weight: 500;
+    text-align: center;
+    text-shadow: 1px 2px rgba(50, 50, 70, 0.5);
+}
+
+.location-box .date {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    text-align: center;
+}
+
+.weather-box {
+    text-align: center;
+}
+
+.weather-box .temp {
+    position: relative;
+    display: inline-block;
+    margin: 30px auto;
+    /* background: rgba(255, 255, 255, 0.2); */
+    padding: 15px 25px;
+    color: #fff;
+    font-size: 102px;
+    font-weight: 900;
+    text-shadow: 3px 1px rgba(50, 50, 70, 0.5);
+    text-align: center;
+    /* box-shadow: 2px 4px rgba(0, 0, 0, 0.2); */
+    border-radius: 5px;
+}
+
+.weather-box .weather {
+    color: #fff;
+    font-size: 48px;
+    font-weight: 700;
+    text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
+.no-location {
+    text-align: center;
+    margin-top: -20px;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #f0f0f0;
+    text-shadow: 2px 1px rgba(10, 10, 10, 1);
 }
